Fixed form size
Page no longer overflows

--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -31,13 +31,14 @@ input[type=text]:disabled {
   background-color: #dedede;
 }
 input[type=submit] {
-  background-color: #4CAF50;
+  background-color: #000675;
   color: white;
   padding: 12px 20px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  float: left;
+  float:right;
+  margin-top:7px;
 }
 .input-stacc{
   width: 130px;
@@ -188,15 +189,20 @@ color:  #f0a946
   background-color: #b5d3ff;
   float:left;
   width:250px;
-  margin-left:300px;
-  margin-top:50px;
+  margin-top:30px;
+  margin-left:100px;
+  margin-right:100px;
+  margin-top:50px !important;
   border-radius:10px;
   padding:10px;
   font-size:0.8rem;
+  height:160px;
 }
 .flex-container {
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 .lanheader{
   font-size: 2.4rem;
